add findbugs checking